--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <h2>About me
               </h2>
             </header>
-            <p>Language & Cognition - Data Visualisation - Corpus Linguistics - Psycholinguistics - Graph Theory - Collocation Networks
+            <p>
             I'm a PhD student, research assistant and associate lecturer at Lancaster University.
             I greatly enjoy all things corpus linguistics, psycholinguistics, and data visualisation.
             The main aim of my work is to develop new, explainable methodologies and workflows so we can analyse (existing) linguistic data in new ways and further our understanding of language and the mind.
@@ -47,7 +47,43 @@
             </ul>
           </section>
 
-        <!-- Two -->
+          <h5>Projects and Experience</h5>
+              <p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>
+
+              Projects at Lancaster University
+
+                <ul class="alt">
+                <li>Teaching - Undergraduate Modules</li>
+                <li>I have been teaching several modules at Lancaster University since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
+                <li>Teaching - MOOC</li>
+                <li>I have been deputy lead mentor for Lancaster's "Corpus Linguistics - Method, Analysis, Interpretation" online course. This course runs yearly, has multiple thousands of participants and I have been involved since 2020.</li>
+                <li>Teaching and Technical Assistance - Lancaster Summer Schools in Corpus Linguistics</li>
+                <li>I have been helping with the Lancaster Summer Schools in Corpus Linguistics since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat).</li>
+                <li>Research Assistant Roles - BNC Assistant</li>
+                <li>I worked on preprocessing and data cleaning of the British National Corpus 2014 from 2020 to its publication in late 2021.</li>
+                <li>Research Assistant Roles - Data Processing</li>
+                <li>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
+                <li>Research Assistant Roles - Manual Coding</li>
+                <li>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
+                <li>Technical Assistant Roles - ECR Events</li>
+                <li>I am helping with the recording and communication for several ECR Events.</li>
+                <li>Technical Assistant Roles - BNC launch event</li>
+
+              </p>
+              <p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Independent Projects
+
+                <li>COMPILE Learning</li>
+                <li>Open Access Programming Skills Development</li>
+                <li>I coordinate the Lancaster branch of COMPILE and teach select pyhton and regex lectures.</li>
+                <li>Lone Wolf Networks</li>
+                <li>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
+              </p>
+
+
+     
+
+        <!-- Four -->
+       <!--
           <section id="two">
             <h2>Projects at Lancaster University</h2>
             <div class="row">
@@ -87,10 +123,9 @@
               <li><a href="#" class="button">Full Portfolio</a></li>
             </ul>
           </section>
+Two -->
 
-
-        <-- Four -->
-        <--
+        <!--
           <section id="four">
             <h2>Elements</h2>
 
@@ -109,7 +144,7 @@
                 <h5>Heading with a Subtitle</h5>
                 <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
               </header>
-              <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+              <p>Language & Cognition - Data Visualisation - Corpus Linguistics - Psycholinguistics - Graph Theory - Collocation Networks. </p>
               <hr />
               <h2>Heading Level 2</h2>
               <h3>Heading Level 3</h3>
