--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
           </section>
 
           <h5>Projects and Experience</h5>
-              <p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>
+              <p><span class="image left"><img src="images/thumbs/LU Logo.jpg" alt="" /></span>
 
               Projects at Lancaster University
 
                 <ul class="alt">
-                <li>Teaching - Undergraduate Modules</li>
-                <li>I have been teaching several modules at Lancaster University since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
-                <li>Teaching - MOOC</li>
-                <li>I have been deputy lead mentor for Lancaster's "Corpus Linguistics - Method, Analysis, Interpretation" online course. This course runs yearly, has multiple thousands of participants and I have been involved since 2020.</li>
-                <li>Teaching and Technical Assistance - Lancaster Summer Schools in Corpus Linguistics</li>
-                <li>I have been helping with the Lancaster Summer Schools in Corpus Linguistics since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat).</li>
-                <li>Research Assistant Roles - BNC Assistant</li>
-                <li>I worked on preprocessing and data cleaning of the British National Corpus 2014 from 2020 to its publication in late 2021.</li>
-                <li>Research Assistant Roles - Data Processing</li>
-                <li>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
-                <li>Research Assistant Roles - Manual Coding</li>
-                <li>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
-                <li>Technical Assistant Roles - ECR Events</li>
-                <li>I am helping with the recording and communication for several ECR Events.</li>
-                <li>Technical Assistant Roles - BNC launch event</li>
+                <li>Teaching - Undergraduate Modules
+                <br/>I have been teaching several modules at Lancaster University since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
+                <li>Teaching - MOOC
+                <br/>I have been deputy lead mentor for Lancaster's "Corpus Linguistics - Method, Analysis, Interpretation" online course. This course runs yearly, has multiple thousands of participants and I have been involved since 2020.</li>
+                <li>Teaching and Technical Assistance - Lancaster Summer Schools in Corpus Linguistics
+                <br/>I have been helping with the Lancaster Summer Schools in Corpus Linguistics since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat).</li>
+                <li>Research Assistant Roles - BNC Assistant
+                <br/>I worked on preprocessing and data cleaning of the British National Corpus 2014 from 2020 to its publication in late 2021.</li>
+                <li>Research Assistant Roles - Data Processing
+                <br/>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
+                <li>Research Assistant Roles - Manual Coding
+                <br/>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
+                <li>Technical Assistant Roles - ECR Events
+                <br/>I am helping with the recording and communication for several ECR Events.</li>
+                <li>Technical Assistant Roles - BNC launch event
+                  <br/> I helped with the live stream and onsite organisation of the BNC launch event in 2021.</li>
 
               </p>
-              <p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Independent Projects
+              <p><span class="image right"><img src="images/thumbs/COMPILE.jpeg" alt="" /></span>Independent Projects
 
-                <li>COMPILE Learning</li>
-                <li>Open Access Programming Skills Development</li>
-                <li>I coordinate the Lancaster branch of COMPILE and teach select pyhton and regex lectures.</li>
-                <li>Lone Wolf Networks</li>
-                <li>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
+                <li>COMPILE Learning - Open Access Programming Skills Development
+              <br/> I coordinate the Lancaster branch of COMPILE and teach select pyhton and regex lectures.</li>
+                <li>Lone Wolf Networks
+                <br/>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
               </p>
 
 
@@ -445,9 +445,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <footer id="footer">
         <div class="inner">
           <ul class="icons">
-            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-            <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="https://twitter.com/hanna_schmueck" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://github.com/hannaschmueck" class="icon brands fa-github"><span class="label">Github</span></a></li>
+            <li><a href="mailto:h.schmueck@lancaster.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
           </ul>
           <ul class="copyright">
             <li>&copy; Hanna Schmück</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
