--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- One -->
           <section id="one">
             <header class="major">
-              <h2>About me
+              <h2>Hanna Schmück
               </h2>
             </header>
             <p>
@@ -43,35 +43,35 @@
             </ul>
           </section>
 
-          <h5>Projects and Experience</h5>
+          <h5>Projects and Experience at Lancaster University </h5>
               <p><span class="image left"><img src="images/thumbs/LU Logo.jpg" alt="" /></span>
 
-              Projects at Lancaster University
-
                 <ul class="alt">
-                <li>Teaching - Undergraduate Modules
+                <li><b>Teaching - Undergraduate Modules</b>
                 <br/>I have been teaching several modules at Lancaster University since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
-                <li>Teaching - MOOC
+                <li><b>Teaching - MOOC</b>
                 <br/>I have been deputy lead mentor for Lancaster's "Corpus Linguistics - Method, Analysis, Interpretation" online course. This course runs yearly, has multiple thousands of participants and I have been involved since 2020.</li>
-                <li>Teaching and Technical Assistance - Lancaster Summer Schools in Corpus Linguistics
+                <li><b>Teaching and Technical Assistance - Lancaster Summer Schools in Corpus Linguistics</b>
                 <br/>I have been helping with the Lancaster Summer Schools in Corpus Linguistics since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat).</li>
-                <li>Research Assistant Roles - BNC Assistant
+                <li><b>Research Assistant Roles - BNC Assistant</b>
                 <br/>I worked on preprocessing and data cleaning of the British National Corpus 2014 from 2020 to its publication in late 2021.</li>
-                <li>Research Assistant Roles - Data Processing
+                <li><b>Research Assistant Roles - Data Processing</b>
                 <br/>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
-                <li>Research Assistant Roles - Manual Coding
+                <li><b>Research Assistant Roles - Manual Coding</b>
                 <br/>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
-                <li>Technical Assistant Roles - ECR Events
+                <li>T<b>echnical Assistant Roles - ECR Events</b>
                 <br/>I am helping with the recording and communication for several ECR Events.</li>
-                <li>Technical Assistant Roles - BNC launch event
+                <li><b>Technical Assistant Roles - BNC launch event</b>
                   <br/> I helped with the live stream and onsite organisation of the BNC launch event in 2021.</li>
-
+                <li><b>Volunteering - Postgraduate Liaison of the LAEL Society</b>
+                  <br/> I was the postgraduate liaision of the LAEL Society from 02/2020 to 06/2022. </li>
               </p>
-              <p><span class="image right"><img src="images/thumbs/COMPILE.jpeg" alt="" /></span>Independent Projects
+            <h5>Independent Projects and Experience </h5>
+              <p><span class="image right"><img src="images/thumbs/COMPILE.jpeg" alt="" /></span>
 
-                <li>COMPILE Learning - Open Access Programming Skills Development
+                <li><b>COMPILE Learning - Open Access Programming Skills Development</b>
               <br/> I coordinate the Lancaster branch of COMPILE and teach select pyhton and regex lectures.</li>
-                <li>Lone Wolf Networks
+                <li><b>Lone Wolf Networks</b>
                 <br/>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
               </p>
 
