--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header -->
       <header id="header">
         <div class="inner">
-          <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+          <img src="images/avatar.jpg" alt="Hanna Schmueck" />
           <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
           <br />
 
