--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </section>
 
           <h5>Projects and Experience at Lancaster University </h5>
-              <p><span class="image left"><img src="images/thumbs/Teaching.jpg" alt="" /></span>
+              <p><span class="image left"><img src="images/fulls/Teaching.jpg" alt="" /></span>
 
                 <ul class="alt">
                 <li><b>Teaching - Undergraduate Modules</b>
