--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header -->
       <header id="header">
         <div class="inner">
-          <img src="images/avatar.jpg" alt="Hanna Schmueck" />
+          <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
           <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
           <br />
 
@@ -44,7 +44,7 @@
           </section>
 
           <h5>Projects and Experience at Lancaster University </h5>
-              <p><span class="image left"><img src="images/fulls/Teaching.jpg" alt="" /></span>
+              <p><span class="image left"><img src="images/fulls/teaching.jpg" alt="" /></span>
 
                 <ul class="alt">
                 <li><b>Teaching - Undergraduate Modules</b>
@@ -59,7 +59,7 @@
                 <br/>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
                 <li><b>Research Assistant Roles - Manual Coding</b>
                 <br/>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
-                <li>T<b>echnical Assistant Roles - ECR Events</b>
+                <li><b>Technical Assistant Roles - ECR Events</b>
                 <br/>I am helping with the recording and communication for several ECR Events.</li>
                 <li><b>Technical Assistant Roles - BNC launch event</b>
                   <br/> I helped with the live stream and onsite organisation of the BNC launch event in 2021.</li>
@@ -124,7 +124,6 @@ Two -->
         <!--
           <section id="four">
             <h2>Elements</h2>
-
             <section>
               <h4>Text</h4>
               <p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
@@ -152,16 +151,13 @@ Two -->
               <blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
               <h5>Preformatted</h5>
               <pre><code>i = 0;
-
 while (!deck.isInOrder()) {
 print 'Iteration ' + i;
 deck.shuffle();
 i++;
 }
-
 print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
             </section>
-
             <section>
               <h4>Lists</h4>
               <div class="row">
@@ -193,7 +189,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                   <ul class="icons">
                     <li><a href="https://twitter.com/hanna_schmueck" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                     <li><a href="https://github.com/hannaschmueck" class="icon brands fa-github"><span class="label">Github</span></a></li>
-
                   </ul>
                 </div>
               </div>
@@ -233,7 +228,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 </div>
               </div>
             </section>
-
             <section>
               <h4>Table</h4>
               <h5>Default</h5>
@@ -281,7 +275,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                   </tfoot>
                 </table>
               </div>
-
               <h5>Alternate</h5>
               <div class="table-wrapper">
                 <table class="alt">
@@ -328,7 +321,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 </table>
               </div>
             </section>
-
             <section>
               <h4>Buttons</h4>
               <ul class="actions">
@@ -357,7 +349,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 <li><span class="button disabled">Default</span></li>
               </ul>
             </section>
-
             <section>
               <h4>Form</h4>
               <form method="post" action="#">
@@ -409,7 +400,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 </div>
               </form>
             </section>
-
             <section>
               <h4>Image</h4>
               <h5>Fit</h5>
