--- a/index.html
+++ b/index.html
@@ -48,30 +48,41 @@
 
                 <ul class="alt">
                 <li><b>Teaching - Undergraduate Modules</b>
-                <br/>I have been teaching several modules at Lancaster University since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
+                  <br/>
+                <br/>I have been teaching several modules at <a href="https://www.lancaster.ac.uk/linguistics/about/people/hanna-schmueck">Lancaster University</a> since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
                 <li><b>Teaching - MOOC</b>
-                <br/>I have been deputy lead mentor for Lancaster's "Corpus Linguistics - Method, Analysis, Interpretation" online course. This course runs yearly, has multiple thousands of participants and I have been involved since 2020.</li>
-                <li><b>Teaching and Technical Assistance - Lancaster Summer Schools in Corpus Linguistics</b>
-                <br/>I have been helping with the Lancaster Summer Schools in Corpus Linguistics since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat).</li>
+                  <br/>
+                <br/>I have been deputy lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020.</li>
+                <li><b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b>
+                  <br/>
+                <br/>I have been helping with the <a href="http://wp.lancs.ac.uk/corpussummerschools/">Lancaster Summer Schools in Corpus Linguistics</a> L since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat, operating the presentations etc.).</li>
                 <li><b>Research Assistant Roles - BNC Assistant</b>
-                <br/>I worked on preprocessing and data cleaning of the British National Corpus 2014 from 2020 to its publication in late 2021.</li>
+                  <br/>
+                <br/>I worked on preprocessing and data cleaning of the <a href="https://www.degruyter.com/document/doi/10.1515/text-2020-0052/html?lang=en">British National Corpus 2014</a>  from 2020 to its publication in late 2021.</li>
                 <li><b>Research Assistant Roles - Data Processing</b>
+                  <br/>
                 <br/>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
                 <li><b>Research Assistant Roles - Manual Coding</b>
+                  <br/>
                 <br/>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
                 <li><b>Technical Assistant Roles - ECR Events</b>
+                  <br/>
                 <br/>I am helping with the recording and communication for several ECR Events.</li>
                 <li><b>Technical Assistant Roles - BNC launch event</b>
+                  <br/>
                   <br/> I helped with the live stream and onsite organisation of the BNC launch event in 2021.</li>
                 <li><b>Volunteering - Postgraduate Liaison of the LAEL Society</b>
+                  <br/>
                   <br/> I was the postgraduate liaision of the LAEL Society from 02/2020 to 06/2022. </li>
               </p>
             <h5>Independent Projects and Experience </h5>
               <p><span class="image right"><img src="images/thumbs/COMPILE.jpeg" alt="" /></span>
 
                 <li><b>COMPILE Learning - Open Access Programming Skills Development</b>
-              <br/> I coordinate the Lancaster branch of COMPILE and teach select pyhton and regex lectures.</li>
+                  <br/>
+              <br/> I coordinate the Lancaster branch of <a href="https://www.compilelearning.co.uk">COMPILE</a>  and teach select pyhton and regex lectures.</li>
                 <li><b>Lone Wolf Networks</b>
+                  <br/>
                 <br/>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
               </p>
 
