--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@
                 <li><b>Teaching - MOOC</b>
                   <br/>
                 <br/>I have been deputy lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020.</li>
-                <li><b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b>
+                <li>
+
+                  <span class="image right"><img src="images/fulls/MOOC.jpg" alt="" /></span>
+
+
+                  <b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b>
                   <br/>
                 <br/>I have been helping with the <a href="http://wp.lancs.ac.uk/corpussummerschools/">Lancaster Summer Schools in Corpus Linguistics</a> L since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat, operating the presentations etc.).</li>
+                 <span class="image left"><img src="images/fulls/BNC.jpg" alt="" /></span>
                 <li><b>Research Assistant Roles - BNC Assistant</b>
                   <br/>
                 <br/>I worked on preprocessing and data cleaning of the <a href="https://www.degruyter.com/document/doi/10.1515/text-2020-0052/html?lang=en">British National Corpus 2014</a>  from 2020 to its publication in late 2021.</li>
@@ -67,13 +73,17 @@
                 <br/>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
                 <li><b>Technical Assistant Roles - ECR Events</b>
                   <br/>
-                <br/>I am helping with the recording and communication for several ECR Events.</li>
+                <br/>I am helping with the recording and communication for the
+                <a href="https://www.eventbrite.co.uk/e/quantitative-research-methods-for-social-sciences-tickets-308863648487">Quantitative Research Methods for Social Sciences</a> for early career researchers event series. The videos of past sessions are available <a href="https://youtube.com/playlist?list=PL_RR3fkE2NtTXZR_MIaIwiH-SBsyLjCWH">here</a>.
+               </li>
                 <li><b>Technical Assistant Roles - BNC launch event</b>
                   <br/>
-                  <br/> I helped with the live stream and onsite organisation of the BNC launch event in 2021.</li>
+                  <br/> I helped with the live stream and onsite organisation of the 
+                  <a href="http://cass.lancs.ac.uk/celebrating-the-written-bnc2014-lancaster-castle-event/">BNC launch event</a> (over 1,200 participants) in 2021.</li>
+                  <span class="image right"><img src="images/fulls/LAEL.jpg" alt="" /></span>
                 <li><b>Volunteering - Postgraduate Liaison of the LAEL Society</b>
                   <br/>
-                  <br/> I was the postgraduate liaision of the LAEL Society from 02/2020 to 06/2022. </li>
+                  <br/> I was the postgraduate liaision of the <a href="https://twitter.com/laelsociety">LAEL Society</a> from 02/2020 to 06/2022. </li>
               </p>
             <h5>Independent Projects and Experience </h5>
               <p><span class="image right"><img src="images/thumbs/COMPILE.jpeg" alt="" /></span>
