--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Main -->
       <div id="main">
 
-        <!-- One -->
+        <!-- Introduction -->
           <section id="one">
             <header class="major">
               <h2>Hanna Schmück
@@ -37,10 +37,8 @@
             I'm a PhD student, research assistant and associate lecturer at Lancaster University.
             I greatly enjoy all things corpus linguistics, psycholinguistics, and data visualisation.
             The main aim of my work is to develop new, explainable methodologies and workflows so we can analyse (existing) linguistic data in new ways and further our understanding of language and the mind.
-
+            I am a Klaus Murmann Doctoral Fellow at Stiftung der deutschen Wirtschaft gGmbH (Foundation of German Business/ UK regional group).
             Have a look at my research/projects, learn more about me, or get in touch:
-
-            </ul>
           </section>
 
           <h5>Projects and Experience at Lancaster University </h5>
@@ -96,8 +94,11 @@
                 <br/>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
               </p>
 
-
-     
+        <!-- Footer -->
+          <section id="three">
+            <p>
+            I am a Klaus Murmann Doctoral Fellow at Stiftung der deutschen Wirtschaft gGmbH (Foundation of German Business/ UK regional group).
+          </section>
 
         <!-- Four -->
        <!--
