--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <br/> I was the postgraduate liaision of the <a href="https://twitter.com/laelsociety">LAEL Society</a> from 02/2020 to 06/2022. </li>
               </p>
             <h5>Independent Projects and Experience </h5>
-              <p><span class="image right"><img src="images/thumbs/COMPILE.jpeg" alt="" /></span>
+              <p><span class="image left"><img src="images/fulls/COMPILE.jpeg" alt="" /></span>
 
                 <li><b>COMPILE Learning - Open Access Programming Skills Development</b>
                   <br/>
