--- a/index.html
+++ b/index.html
@@ -93,14 +93,77 @@
                 <br/>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
               </p>
 
-        <!-- Footer -->
+
+
+
+        
+
+
+          <section id="five">
+            <h2>Conferences and Presentations</h2>
+
+              <h4>CL2021 - 16.-20.07.2021, Limerick Ireland (online)</h4>
+              <p>
+                I presented findings from my PhD project at the International Conference for Corpus Linguistics <a href="https://www.cl2021.org/schedule">(CL) </a>
+                </br>
+                A video of my talk can be accessed here:
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/z-WkxbtPrYc?start=976" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                <h4>UCREL - 03.06.2021, Lancaster University(online)</h4>
+              <p>
+                I gave a talk on "Traversing Language Structures: Creating, Exploring and Visualising Large Scale Linguistic Networks" as part of <a href="https://ucrel.lancs.ac.uk/crs/">the UCREL seminar series</a>.
+                </br>
+                Abstract:
+                How does the language we are surrounded by differ from the language in our Mental Lexicon? We try to explore this question by developing new methods to display, analyse and compare large-scale linguistic networks using graph-theoretical parameters. The aim is to examine structural similarities and differences between a collocation network (based on the BNC2014 / BNC2014 Baby+(Brezina, 2019)) and a psycholinguistic network (based on cue-response pairs provided by over 90,000 participants for the SWOW-EN project (De Deyne et al., 2018)) in order to further our understanding of the relationship between language perception and language production. In addition to this, a new, dynamic visualisation of said networks furthermore allows for identifying "latent patterns" (Dong & Buckingham, 2018) in the data that would not have been observable when starting an analysis using pre-determined words of interest. In this presentation, the methodology and overarching justifications for the project will be presented alongside a demonstration of several custom network visualisations in Cytoscape (Shannon et al., 2003) and a case study exploring properties of the BNC2014 Baby+ and SWOW-EN"
+              </br>
+                A video of my talk can be accessed here:
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6FYjih_TIDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </p>
+</section>
+
+
+<!-- Footer -->
           <section id="three">
             <p>
+
             I am a Klaus Murmann Doctoral Fellow at Stiftung der deutschen Wirtschaft gGmbH (Foundation of German Business/ UK regional group).
           </section>
 
+
+
         <!-- Four -->
        <!--
+            <h2>Attended Events</h2>
+
+            <p></p>
+
+              <p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+              This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+              This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+              <hr />
+              <header>
+                <h4>Heading with a Subtitle</h4>
+                <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+              </header>
+              <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+              <header>
+                <h5>Heading with a Subtitle</h5>
+                <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+              </header>
+              <p>Language & Cognition - Data Visualisation - Corpus Linguistics - Psycholinguistics - Graph Theory - Collocation Networks. </p>
+              <hr />
+              <h2>Heading Level 2</h2>
+              <h3>Heading Level 3</h3>
+              <h4>Heading Level 4</h4>
+              <h5>Heading Level 5</h5>
+              <h6>Heading Level 6</h6>
+              <hr />
+              <h5>Blockquote</h5>
+              <blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+              <h5>Preformatted</h5>
+
+      </section>
+
           <section id="two">
             <h2>Projects at Lancaster University</h2>
             <div class="row">
@@ -141,6 +204,7 @@
             </ul>
           </section>
 Two -->
+
 
         <!--
           <section id="four">
