--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <p>
                 I presented findings from my PhD project at the International Conference for Corpus Linguistics <a href="https://www.cl2021.org/schedule">(CL) </a>
                 </br>
-                A video of my talk can be accessed here:
+                A video of my talk can be accessed here:</br></br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/z-WkxbtPrYc?start=976" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <h4>UCREL - 03.06.2021, Lancaster University(online)</h4>
@@ -116,7 +116,7 @@
                 Abstract:
                 How does the language we are surrounded by differ from the language in our Mental Lexicon? We try to explore this question by developing new methods to display, analyse and compare large-scale linguistic networks using graph-theoretical parameters. The aim is to examine structural similarities and differences between a collocation network (based on the BNC2014 / BNC2014 Baby+(Brezina, 2019)) and a psycholinguistic network (based on cue-response pairs provided by over 90,000 participants for the SWOW-EN project (De Deyne et al., 2018)) in order to further our understanding of the relationship between language perception and language production. In addition to this, a new, dynamic visualisation of said networks furthermore allows for identifying "latent patterns" (Dong & Buckingham, 2018) in the data that would not have been observable when starting an analysis using pre-determined words of interest. In this presentation, the methodology and overarching justifications for the project will be presented alongside a demonstration of several custom network visualisations in Cytoscape (Shannon et al., 2003) and a case study exploring properties of the BNC2014 Baby+ and SWOW-EN"
               </br>
-                A video of my talk can be accessed here:
+                A video of my talk can be accessed here:</br></br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6FYjih_TIDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </p>
 </section>
