--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
           <section id="three">
             <p>
 
-            I am a Klaus Murmann Doctoral Fellow at Stiftung der deutschen Wirtschaft gGmbH (Foundation of German Business/ UK regional group).
+            I am a Klaus Murmann Doctoral Fellow at Stiftung der deutschen Wirtschaft gGmbH (Foundation of German Business/ UK regional group) and a winner of the Geoffrey 
+              Leech Outstanding MA Student Award for my MA in Language and Linguistics.
           </section>
 
 
