--- a/index.html
+++ b/index.html
@@ -121,7 +121,25 @@
               </p>
 </section>
 
+<section id="six">
+            <h2>Attended Conferences and Events (not a full overview) </h2>
+              <div class="row">
+                <div class="col-6 col-12-xsmall">
+                  <ul>
+                    <li>Brexit means Brexit? Ein Symposium - AdW Mainz - 03-07 December 2017</li>
+                    <li>Machine Learning for Humanists - N8 CIR June 2021</li>
+                    <li>The International Corpus Linguistics Conference 2021 - 13-17 July 2021</li>
+                    <li>Advanced Language Processing Winter School - ALPS, 17-22 January 2021 </li>
+                    <li>École thématique d’été « Annotations » - 30 May - 03 June 2022</li>
+                    <li>The 43rd Annual Conference of the International Computer Archive for Modern and Medieval English  - Corpus Linguistics: A New Normal? 27-30 July 2022 </li>
+                    
+                  </ul>
 
+                </div>
+                
+                                    <iframe width="100%" height="712" frameborder="0"
+  src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart%2Ckey"></iframe>
+</section>
 
 
 
