--- a/index.html
+++ b/index.html
@@ -123,8 +123,6 @@
 
 <section id="six">
             <h2>Attended Conferences and Events (not a full overview) </h2>
-              <div class="row">
-                <div class="col-6 col-12-xsmall">
                   <ul>
                     <li>Brexit means Brexit? Ein Symposium - AdW Mainz - 03-07 December 2017</li>
                     <li>Machine Learning for Humanists - N8 CIR June 2021</li>
@@ -137,8 +135,8 @@
 
                 </div>
                 
-                                    <iframe width="100%" height="712" frameborder="0"
-  src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart%2Ckey"></iframe>
+<iframe width="100%" height="445" frameborder="0"
+  src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart"></iframe>
 </section>
 
 
