--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </section>
 
 <section id="six">
-            <h2>Attended Conferences and Events (not a full overview) </h2>
+            <h2>Attended Conferences and Events (selection) </h2>
                   <ul>
                     <li>Brexit means Brexit? Ein Symposium - AdW Mainz - 03-07 December 2017</li>
                     <li>Machine Learning for Humanists - N8 CIR June 2021</li>
@@ -135,9 +135,9 @@
 
                 </div>
                 
-<iframe width="100%" height="100%" frameborder="0"
+<iframe width="100%" height="625" frameborder="0"
   src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart"></iframe>
-</section>
+
 
 
 
