--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                 </div>
                 
-<iframe width="100%" height="645" frameborder="0"
+<iframe width="80%" height="100%" frameborder="0"
   src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart"></iframe>
 
 
