--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 
                 </div>
                 
-<iframe width="100%" height="700px" frameborder="0"
+<iframe width="100%" height="645px" frameborder="0"
   src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart"></iframe>
 
 
-
+</section>
 
         <!-- Four -->
        <!--
