--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                     <li>The 43rd Annual Conference of the International Computer Archive for Modern and Medieval English  - Corpus Linguistics: A New Normal? 27-30 July 2022 </li>
                   </ul>
     
-                   <iframe width="100%" height="645px" frameborder="0"
-  src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart"></iframe>
+                   <iframe width="100%" height="702" frameborder="0"
+  src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart%2Ckey"></iframe>
 
                 
 </section>
