--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                     <li>École thématique d’été « Annotations » - 30 May - 03 June 2022</li>
                     <li>The 43rd Annual Conference of the International Computer Archive for Modern and Medieval English  - Corpus Linguistics: A New Normal? 27-30 July 2022 </li>
                   </ul>
-    
+    <h2>Just for fun - some data visualisation (selection) </h2>
+  </br>
                    <iframe width="100%" height="702" frameborder="0"
   src="https://observablehq.com/embed/1a1a224a2f37dd4f?cells=chart%2Ckey"></iframe>
 
