--- a/networks.html
+++ b/networks.html
@@ -47,7 +47,8 @@
     </br></br>
              </p>
   <h2>The Time Machine: An Invention (H.G. Wells) social network of characters. </h2>
-            <p>Edges represent interactions in the same chapter, node size represents number of total appearances (log scale).</br></br>
+            <p>Edges represent interactions in the same chapter, node size represents number of total appearances (log scale).</br>
+The top network displays the entire work, bottom left is the first and bottom right the second half of the book.</br>
             <iframe width="100%" height="684" frameborder="0"
   src="https://observablehq.com/embed/52d1239b126fc031?cells=chart"></iframe>
 </br></br>
