--- a/networks.html
+++ b/networks.html
@@ -8,7 +8,7 @@
   <head>
     <title>Network Views</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.7, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body class="is-preload">
@@ -16,7 +16,7 @@
     <!-- Header -->
       <header id="header">
         <div class="inner">
-          <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+          <a href="https://hannaschmueck.github.io/networks.html#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
           <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
           <br />
 
