--- a/networks.html
+++ b/networks.html
@@ -16,7 +16,7 @@
     <!-- Header -->
       <header id="header">
         <div class="inner">
-          <a href="https://hannaschmueck.github.io/networks.html#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+          <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
           <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
           <br />
 
