--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
                 A video of my talk can be accessed here:</br></br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6FYjih_TIDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </p>
+
+              <h4>ICAME43 - 27.-30.07.2022, Cambridge, UK</h4>
+              <p>
+                I presented methodological findings from my PhD project at the 43rd Annual Conference of the International Computer Archive for Modern and Medieval English <a href="https://www.icame43.com">(ICAME) </a>
+                </br>
+                My abstract can be found <a href="https://www.icame43.com/_files/ugd/2ad07d_8ef03a7033ba4fee95eba3d14efd5b30.pdf"> here </a> (page 152). <br>
+                A video of my talk will be made available as soon as I get access to the recording.</br></br>
+
 </section>
 
 <section id="six">
