--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </header>
 
-    <!-- Main -->
+       <!-- Main -->
       <div id="main">
 
         <!-- Introduction -->
@@ -46,10 +46,10 @@
                 <ul class="alt">
                 <li><b>Teaching - Undergraduate Modules</b>
                   <br/>
-                <br/>I have been teaching several modules at <a href="https://www.lancaster.ac.uk/linguistics/about/people/hanna-schmueck">Lancaster University</a> since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
+                <br/>I have been teaching several modules at <a href="https://www.lancaster.ac.uk/linguistics/about/people/hanna-schmueck" target="_blank">Lancaster University</a> since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
                 <li><b>Teaching - MOOC</b>
                   <br/>
-                <br/>I have been deputy lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020.</li>
+                <br/>I have been deputy lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020.</li>
                 <li>
 
                   <span class="image right"><img src="images/fulls/MOOC.jpg" alt="" /></span>
@@ -57,11 +57,11 @@
 
                   <b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b>
                   <br/>
-                <br/>I have been helping with the <a href="http://wp.lancs.ac.uk/corpussummerschools/">Lancaster Summer Schools in Corpus Linguistics</a> L since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat, operating the presentations etc.).</li>
+                <br/>I have been helping with the <a href="http://wp.lancs.ac.uk/corpussummerschools/" target="_blank">Lancaster Summer Schools in Corpus Linguistics</a> L since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat, operating the presentations etc.).</li>
                  <span class="image left"><img src="images/fulls/BNC.jpg" alt="" /></span>
                 <li><b>Research Assistant Roles - BNC Assistant</b>
                   <br/>
-                <br/>I worked on preprocessing and data cleaning of the <a href="https://www.degruyter.com/document/doi/10.1515/text-2020-0052/html?lang=en">British National Corpus 2014</a>  from 2020 to its publication in late 2021.</li>
+                <br/>I worked on preprocessing and data cleaning of the <a href="https://www.degruyter.com/document/doi/10.1515/text-2020-0052/html?lang=en" target="_blank">British National Corpus 2014</a>  from 2020 to its publication in late 2021.</li>
                 <li><b>Research Assistant Roles - Data Processing</b>
                   <br/>
                 <br/>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
@@ -71,7 +71,7 @@
                 <li><b>Technical Assistant Roles - ECR Events</b>
                   <br/>
                 <br/>I am helping with the recording and communication for the
-                <a href="https://www.eventbrite.co.uk/e/quantitative-research-methods-for-social-sciences-tickets-308863648487">Quantitative Research Methods for Social Sciences</a> for early career researchers event series. The videos of past sessions are available <a href="https://youtube.com/playlist?list=PL_RR3fkE2NtTXZR_MIaIwiH-SBsyLjCWH">here</a>.
+                <a href="https://www.eventbrite.co.uk/e/quantitative-research-methods-for-social-sciences-tickets-308863648487" target="_blank">Quantitative Research Methods for Social Sciences</a> for early career researchers event series. The videos of past sessions are available <a href="https://youtube.com/playlist?list=PL_RR3fkE2NtTXZR_MIaIwiH-SBsyLjCWH">here</a>.
                </li>
                 <li><b>Technical Assistant Roles - BNC launch event</b>
                   <br/>
@@ -87,7 +87,7 @@
 
                 <li><b>COMPILE Learning - Open Access Programming Skills Development</b>
                   <br/>
-              <br/> I coordinate the Lancaster branch of <a href="https://www.compilelearning.co.uk">COMPILE</a>  and teach select pyhton and regex lectures.</li>
+              <br/> I coordinate the Lancaster branch of <a href="https://www.compilelearning.co.uk" target="_blank">COMPILE</a>  and teach select pyhton and regex lectures.</li>
                 <li><b>Lone Wolf Networks</b>
                   <br/>
                 <br/>A research project looking at discourses surrounding lone wolf terrorism using network visualisations.</li>
@@ -100,14 +100,14 @@
 
               <h4>CL2021 - 16.-20.07.2021, Limerick Ireland (online)</h4>
               <p>
-                I presented findings from my PhD project at the International Conference for Corpus Linguistics <a href="https://www.cl2021.org/schedule">(CL) </a>
+                I presented findings from my PhD project at the International Conference for Corpus Linguistics <a href="https://www.cl2021.org/schedule" target="_blank">(CL) </a>
                 </br>
                 A video of my talk can be accessed here:</br></br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/z-WkxbtPrYc?start=976" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <h4>UCREL - 03.06.2021, Lancaster University(online)</h4>
               <p>
-                I gave a talk on "Traversing Language Structures: Creating, Exploring and Visualising Large Scale Linguistic Networks" as part of <a href="https://ucrel.lancs.ac.uk/crs/">the UCREL seminar series</a>.
+                I gave a talk on "Traversing Language Structures: Creating, Exploring and Visualising Large Scale Linguistic Networks" as part of <a href="https://ucrel.lancs.ac.uk/crs/" target="_blank">the UCREL seminar series</a>.
                 </br>
                 Abstract:
                 How does the language we are surrounded by differ from the language in our Mental Lexicon? We try to explore this question by developing new methods to display, analyse and compare large-scale linguistic networks using graph-theoretical parameters. The aim is to examine structural similarities and differences between a collocation network (based on the BNC2014 / BNC2014 Baby+(Brezina, 2019)) and a psycholinguistic network (based on cue-response pairs provided by over 90,000 participants for the SWOW-EN project (De Deyne et al., 2018)) in order to further our understanding of the relationship between language perception and language production. In addition to this, a new, dynamic visualisation of said networks furthermore allows for identifying "latent patterns" (Dong & Buckingham, 2018) in the data that would not have been observable when starting an analysis using pre-determined words of interest. In this presentation, the methodology and overarching justifications for the project will be presented alongside a demonstration of several custom network visualisations in Cytoscape (Shannon et al., 2003) and a case study exploring properties of the BNC2014 Baby+ and SWOW-EN"
@@ -118,9 +118,9 @@
 
               <h4>ICAME43 - 27.-30.07.2022, Cambridge, UK</h4>
               <p>
-                I presented methodological findings from my PhD project at the 43rd Annual Conference of the International Computer Archive for Modern and Medieval English <a href="https://www.icame43.com">(ICAME) </a>
+                I presented methodological findings from my PhD project at the 43rd Annual Conference of the International Computer Archive for Modern and Medieval English <a href="https://www.icame43.com" target="_blank">(ICAME) </a>
                 </br>
-                My abstract can be found <a href="https://www.icame43.com/_files/ugd/2ad07d_8ef03a7033ba4fee95eba3d14efd5b30.pdf"> here </a> (page 152). </br>
+                My abstract can be found <a href="https://www.icame43.com/_files/ugd/2ad07d_8ef03a7033ba4fee95eba3d14efd5b30.pdf" target="_blank"> here </a> (page 152). </br>
                 A video of my talk will be made available as soon as I get access to the recording.</br>
                 <span class="image left"><img src="images/fulls/ICAME43.jpg" alt="" /></span></br>
 
@@ -559,4 +559,3 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <script src="assets/js/main.js"></script>
 
   </body>
-</html>
