--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@
 
               <h4>ICAME43 - 27.-30.07.2022, Cambridge, UK</h4>
               <p>
+                <span class="image left"><img src="images/fulls/ICAME43.jpg" alt="" /></span>
+                </br>
                 I presented methodological findings from my PhD project at the 43rd Annual Conference of the International Computer Archive for Modern and Medieval English <a href="https://www.icame43.com" target="_blank">(ICAME) </a>
                 </br>
                 My abstract can be found <a href="https://www.icame43.com/_files/ugd/2ad07d_8ef03a7033ba4fee95eba3d14efd5b30.pdf" target="_blank"> here </a> (page 152). </br>
                 A video of my talk will be made available as soon as I get access to the recording.</br>
-                <span class="image left"><img src="images/fulls/ICAME43.jpg" alt="" /></span></br>
+                </br>
 
 </section>
 
