--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
                 <br/>I have been teaching several modules at <a href="https://www.lancaster.ac.uk/linguistics/about/people/hanna-schmueck" target="_blank">Lancaster University</a> since 2020. Modules I have taught so far include LING228 (Child Language Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics).</li>
                 <li><b>Teaching - MOOC</b>
                   <br/>
-                <br/>I have been deputy lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020.</li>
+                <br/>I have been deputy lead / lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course for multiple years now. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020.</li>
                 <li>
-
                   <span class="image right"><img src="images/fulls/MOOC.jpg" alt="" /></span>
-
+            
+                  <li><b>Mentoring - Methods North West</b>
+                  <br/>
+                <br/>I am currently working as a mentor for reserach students as part of a  <a href="https://twitter.com/MethodsNW/status/1569264899808972800" target="_blank">Methods NW project</a> enabling interdisciplinary and interinstitutional research collaborations. My role involves advising the researcher in methodological matters with regards to corpus linguistics. 
+                <li>
 
                   <b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b>
                   <br/>
