--- a/countdown.html
+++ b/countdown.html
@@ -1,16 +1,40 @@
 <!DOCTYPE HTML>
+<!--
+  Strata by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-
-<head>
-<meta charset="utf-8">
+  <head>
+      <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>home</title>
+<title>countdown</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+    <title>Countdown</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.7, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body class="is-preload">
 
-<div class="m-4">
+    <!-- Header -->
+      <header id="header">
+        <div class="inner">
+          <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+          <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
+          <br />
+
+          </h1>
+        </div>
+      </header>
+
+    <!-- Main -->
+      <div id="main">
+
+        <!-- Introduction -->
+          <section id="one">
+           <div class="m-4">
     <!-- Progress bar HTML -->
     <div class="progress">
         <div class="progress-bar progress-bar-striped" style="min-width: 20px;"></div>
@@ -51,5 +75,31 @@ var i = pvalue;
 
 </script>
 
-</body>
+            
+          </section>
+
+         
+    <!-- Footer -->
+      <footer id="footer">
+        <div class="inner">
+          <ul class="icons">
+            <li><a href="https://twitter.com/hanna_schmueck" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://github.com/hannaschmueck" class="icon brands fa-github"><span class="label">Github</span></a></li>
+            <li><a href="mailto:h.schmueck@lancaster.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+          </ul>
+          <ul class="copyright">
+            <li>&copy; Hanna Schmück</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </div>
+      </footer>
+
+    <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.poptrox.min.js"></script>
+      <script src="assets/js/browser.min.js"></script>
+      <script src="assets/js/breakpoints.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <script src="assets/js/main.js"></script>
+
+  </body>
 </html>
