--- a/countdown.html
+++ b/countdown.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!--<!DOCTYPE HTML>
 <!--
   Strata by HTML5 UP
   html5up.net | @ajlkn
@@ -103,3 +103,4 @@ var i = pvalue;
 
   </body>
 </html>
+-->
