--- a/publications.html
+++ b/publications.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
-<!--
+<--
   Strata by HTML5 UP
   html5up.net | @ajlkn
   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<!--<html>
+<html>
   <head>
       <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
