--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
                 <br/>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
                 <li><b>Research Assistant Roles - Manual Coding</b>
                   <br/>
-                <br/>I started working on a project investigating language testing data. For this project, I carry out manual pragmatic coding.</li>
+                <br/>I started working on a project investigating language testing data. For this project, I carried out manual pragmatic coding.</li>
+                 <li><b>Research Assistant Roles - Data Processing</b>
+                  <br/>
+                <br/>I worked on L2 language proficiency test data, mainly data processing, formatting and statistical analyses of epistemic markers.</li>
+                 <li><b>Research Assistant Roles - LANA Corpus Processing</b>
+                  <br/>
+                <br/>I currently work on the the Lancaster-Northern Arizona Corpus of American English <a href="https://twitter.com/LANA_corpus" target="_blank">(LANA) </a> project in collaboration with colleagues at ASU.</li>
                 <li><b>Technical Assistant Roles - ECR Events</b>
                   <br/>
-                <br/>I am helping with the recording and communication for the
+                <br/>I did the recording and communication for the
                 <a href="https://www.eventbrite.co.uk/e/quantitative-research-methods-for-social-sciences-tickets-308863648487" target="_blank">Quantitative Research Methods for Social Sciences</a> for early career researchers event series. The videos of past sessions are available <a href="https://youtube.com/playlist?list=PL_RR3fkE2NtTXZR_MIaIwiH-SBsyLjCWH">here</a>.
                </li>
                 <li><b>Technical Assistant Roles - BNC launch event</b>
