--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                   <br/> I helped with the live stream and onsite organisation of the 
                   <a href="http://cass.lancs.ac.uk/celebrating-the-written-bnc2014-lancaster-castle-event/">BNC launch event</a> (over 1,200 participants) in 2021.</li>
                   <span class="image right"><img src="images/fulls/LAEL.jpg" alt="" /></span>
+                  <li><b>Technical Assistant Roles - CHIMED-3 </b>
+                  <br/>
+                  <br/> I helped with the live stream and onsite organisation of the 
+                  <a href="https://wp.lancs.ac.uk/chimed-3/"> CHIMED-3 </a> conference in 2023. </li>
                 <li><b>Volunteering - Postgraduate Liaison of the LAEL Society</b>
                   <br/>
                   <br/> I was the postgraduate liaision of the <a href="https://twitter.com/laelsociety">LAEL Society</a> from 02/2020 to 06/2022. </li>
@@ -141,13 +145,15 @@
 <section id="six">
             <h2>Attended Conferences and Events (selection) </h2>
                   <ul>
-                    <li>Brexit means Brexit? Ein Symposium - AdW Mainz - 03-07 December 2017</li>
+                    <li>Brexit means Brexit? Ein Symposium - Akademie der Wissenschaften, Mainz - 03-07 December 2017</li>
+                    <li>BAAL Corpus Linguistics Special Interest Group Annual Worskhop:  Corpora, Discourse and Society - Lancaster - 13 November 2019 </li>
+                    <li>Advanced Language Processing Winter School - ALPS, 17-22 January 2021 </li>
                     <li>Machine Learning for Humanists - N8 CIR June 2021</li>
                     <li>The International Corpus Linguistics Conference 2021 - 13-17 July 2021</li>
-                    <li>Advanced Language Processing Winter School - ALPS, 17-22 January 2021 </li>
                     <li>École thématique d’été « Annotations » - 30 May - 03 June 2022</li>
                     <li>The 43rd Annual Conference of the International Computer Archive for Modern and Medieval English  - Corpus Linguistics: A New Normal? 27-30 July 2022 </li>
-                  </ul>
+                    <li>CHIMED-3, 3rd International Conference on Historical Medical Discourse - London - 11-12 May 2023</li>                
+  </ul>
     <h2>Just for fun - some data visualisation (selection) </h2>
   </br>
                    <iframe width="100%" height="702" frameborder="0"
