--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@ The LWC contains just under 8.5 million words of British newspaper coverage on l
 The results show that topically similar clusters (here: clusters containing temporal and special information related to terrorist attacks, names of terrorists and victims, weapons, and organisations) emerge across the different subsections of the LWC. The observed clusters present a first step towards more holistic insights into discursive patterns while moving away from an exclusively intuition-based starting point for linguistic analysis (Castro & Siew, 2020; Sinclair & Coulthard, 1975; Dong & Buckingham, 2018) .This underlines the notion that the application of graph theoretical methods to language data displays both theoretical and methodological potential (Vitevitch & Goldstein, 2014).
 [1] Here taken to represent the lexicalised end of the lexicogrammatical spectrum.
             </br>
+            <iframe allow="autoplay; fullscreen" height="282" width="500" src="https://estream.lancaster.ac.uk/Embed.aspx?id=67913&amp;code=e9~g5OZF3y0OZzlMDlza5Eks5NFkYgpFb" frameborder="0" allowfullscreen></iframe>
+            </br>
             I also helped organise and chair sessions.
                 </br></br></br>
 </section>
