--- a/publications.html
+++ b/publications.html
@@ -37,8 +37,9 @@
           <br/>
           <br/>
             <h2>Journal Articles</h2>
+          <li>Schmueck, H. Review of Dunn, J. (2022): Natural Language Processing for Corpus Linguistics. International Journal of Corpus Linguistics. [in press] </li>
           <li>Jung, Y; Gablasova, D; Brezina, V; Schmück, H. Annotating evaluative meanings in the Trinity Lancaster Corpus. “Innovations in the compilation and analysis of spoken corpora". Research in Corpus Linguistics. ISSN: 2243-4712. [under review]
-          <li>Schmueck, H. Review of Dunn, J. (2022): Natural Language Processing for Corpus Linguistics. International Journal of Corpus Linguistics. [under review] </li>
+
           </section>
         
 
