--- a/publications.html
+++ b/publications.html
@@ -44,8 +44,8 @@
 
         <section id="two">
           <h2>In prep</h2>
-          <li>Schmueck, H & Malone, D. A pack of lone wolves: An analysis of lone wolf terrorism discourses in the British Press. In prep - planned for submission to Research Methods in Applied Linguistics.
-          <li>Schmueck, H & Brezina, V. Collocations in More context: Large and small-scale approaches to linguistic networks. In prep - planned for submission to International Journal of Corpus Linguistics.
+          <li>Schmueck, H & Malone, D. A pack of lone wolves: An analysis of lone wolf terrorism discourses in the British Press. In prep - planned for submission to Corpora.
+          <li>Schmueck, H & Brezina, V. Collocations in More context: Large and small-scale approaches to linguistic networks. In prep - planned for submission to IJCL.
         </section>
 
         <section id="three">
