--- a/networks.html
+++ b/networks.html
@@ -35,9 +35,9 @@
             </header>
             <p>
             <iframe width="100%" height="900" frameborder="0"
-  src="https://observablehq.com/d/c344077c337f7984"></iframe>
+  src="https://observablehq.com/embed/c344077c337f7984?cells=chart"></iframe>
               </br></br>
-           </p>
+
               <h2>LOWO-MI4-500-nofilter
               </h2>
             </header>
