--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
           <br/>
           <br/>
             <h2>Journal Articles</h2>
-          <li>Schmueck, H. Review of Dunn, J. (2022): Natural Language Processing for Corpus Linguistics. International Journal of Corpus Linguistics. [in press] </li>
+          <li>Schmück, H. (2023). Review of Dunn (2022): Natural Language Processing for Corpus Linguistics. In International Journal of Corpus Linguistics. John Benjamins Publishing Company. https://doi.org/10.1075/ijcl.00057.sch </li>
           <li>Jung, Y; Gablasova, D; Brezina, V; Schmück, H. Annotating evaluative meanings in the Trinity Lancaster Corpus. “Innovations in the compilation and analysis of spoken corpora". Research in Corpus Linguistics. ISSN: 2243-4712. [in press]
         </section>
         
