--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <br/>I currently work on the the Lancaster-Northern Arizona Corpus of American English <a href="https://twitter.com/LANA_corpus" target="_blank">(LANA) </a> project in collaboration with colleagues at ASU.</li>
                   <li><b>Research Assistant Roles - Multimodal Corpora using CloudVision</b>
                   <br/>
-                <br/>I currently work on a multimodal newspaper corpus compilation project with Paul Baker. My role entails writing custim python scripts for collecting the corpus data from several newspaper websites, downloading and processing the images, tagging them using CloudVision and feeding them back into the main body of the text.</li>
+                <br/>I currently work on a multimodal newspaper corpus compilation project with Professor Paul Baker. My role entails writing custum Python scripts for collecting the corpus data from several UK newspaper websites, downloading and processing the images, interfacrting with Google CloudVision and Vertex AI for image tagging, and designing the multimodal corpus.</li>
                 <li><b>Technical Assistant Roles - ECR Events</b>
                   <br/>
                 <br/>I did the recording and communication for the
