--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6FYjih_TIDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </p>
 
+             <h4>'Annotations' Summer School / École thématique d’été « Annotations » - 30.05.-03.06.2022, Banyuls-sur-Mer</h4>
+            <p>
+                I gave a talk titled 'Network Visualisations Of Linguistic Relationships In Large Datasets: A Case Study Exploring The Context Of <i>Normal</i> In British English at the <a href="http://annotations-2022.llf-paris.fr/index.php?langue=en" target="_blank">École thématique d’été « Annotations »</a> in France. This conference/summer school was organised by GDR Lift/Sorbonne.
+            </p>
+            
               <h4>ICAME43 - 27.-30.07.2022, Cambridge, UK</h4>
               <p>
                 <span class="image left"><img src="images/fulls/ICAME43.jpg" alt="" /></span>
